Bug 1370340 - Carry TopLevelOuterContentWindowId to redirected HTTP channels. r=mcmanus

--HG--
extra : rebase_source : dc78c705f0c738b07352b4a7d6d80eac7e65b5b4